SERVER-98752 Change safe dynamic_cast's to static_cast in storage integration layer (#31994)

GitOrigin-RevId: 890cab22fb3765f66ae2b5fbdad84355f2158125